--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <idea-plugin>
     <id>commit-template-idea-plugin</id>
-    <name>Git Commit Template</name>
+    <name>Teamo Git Commit Template</name>
     <version>1.1.1</version>
 
     <vendor email="damien.arrachequesne@gmail.com"/>
